--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # .node_modules
 backend/node_modules/
 backend/dist
+backend-express/node_modules/
+backend-express/dist
 rickandmorty-project/node_modules/
 
 # Env
+backend-express/.env
 rickandmorty-project/.env
 rickandmorty-project/.env.dev
 rickandmorty-project/.env.prod
