--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -17,6 +17,7 @@
   "author": "Erwin Vargas",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
