--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -29,9 +29,12 @@
   },
   "dependencies": {
     "@types/http-errors": "^2.0.1",
+    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "got": "^12.5.3",
+    "got-fetch": "^5.1.4",
     "http-errors": "^2.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
