--- a/rickandmorty-project/package.json
+++ b/rickandmorty-project/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.1.96",
     "axios": "^1.3.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
