--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -8,10 +8,10 @@
     "dev": "nodemon ts-node src/index.ts",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "migration:generate": "pnpm build && npx typeorm migration:generate src/database/migrations/Schema -d=./dist/ormconfig.js",
+    "migration:generate": "pnpm build && npx typeorm migration:generate src/database/migrations/schema -d ./dist/ormconfig",
     "migration:revert": "npx typeorm migration:revert -d dist/ormconfig",
-    "migration:run": "npx typeorm migration:run -d=./dist/ormconfig.js",
-    "migration:show": "npx typeorm migration:show -d=./dist/ormconfig.js"
+    "migration:run": "pnpm build && pnpm migration:show && npx typeorm migration:run -d dist/ormconfig",
+    "migration:show": "pnpm build && npx typeorm migration:show -d dist/ormconfig"
   },
   "keywords": [],
   "author": "Erwin Vargas",
