--- a/backend-express/.env.example
+++ b/backend-express/.env.example
@@ -1,3 +1,9 @@
 PORT=4000
 SECRET_KEY=""
 API_RICK_AND_MORTY= https://rickandmortyapi.com/api
+
+PGDATABASE=
+PGHOST=
+PGPASSWORD=
+PGPORT=
+PGUSER=
