--- a/backend-express/package.json
+++ b/backend-express/package.json
@@ -38,6 +38,7 @@
     "got": "^12.5.3",
     "got-fetch": "^5.1.4",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
