--- a/rickandmorty-project/package.json
+++ b/rickandmorty-project/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "serve": "vite preview"
+    "start": "vite preview"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
